<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">
        <TableRow
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_vinilos"
                android:contentDescription="@string/contDesc_appLogo"/>
        </TableRow>
        <TableRow android:gravity="center">
            <TextView
                android:gravity="center"
                android:textColor="#000000"
                android:id="@+id/text_title"
                android:layout_width="228dp"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textSize="25sp" />

        </TableRow>
        <TableRow
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/white_space"
                android:contentDescription="@null"/>
        </TableRow>
        <TableRow android:gravity="center">
            <TextView
                android:id="@+id/text_body"
                android:layout_width="411dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/body_landing"
                android:textColor="#000000"
                android:textSize="18sp" />

        </TableRow>
        <TableRow
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:src="@drawable/white_space"
                android:contentDescription="@null"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="2">

                <TableRow android:gravity="center">

                    <ImageView
                        android:id="@+id/visitor1"
                        android:layout_width="211dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_visitantes"
                        android:contentDescription="@string/contDesc_visitorButton"/>

                    <ImageView
                        android:id="@+id/collector1"
                        android:layout_width="177dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_coleccionistas"
                        android:contentDescription="@string/contDesc_collectorButton"/>
                </TableRow>

                <TableRow
                    android:layout_height="47dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/visitor2"
                        android:layout_width="170dp"
                        android:layout_height="73dp"
                        android:gravity="center"
                        android:maxHeight="48dp"
                        android:text="@string/visitor"
                        android:textColor="#000000"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/collector2"
                        android:layout_width="170dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/collector"
                        android:textColor="#000000"
                        android:textSize="22sp"
                        android:maxHeight="48dp"/>
                </TableRow>

            </TableLayout>

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>