<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.albums.AlbumDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_height"
            android:background="@drawable/backblue"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAlbumName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30sp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/hello_blank_fragment"
                android:textColor="@color/white"
                android:textSize="34sp"
                tools:text="Nombre del álbum" />

        </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivAlbumCover"
                        android:layout_width="110sp"
                        android:layout_height="110sp"
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginEnd="15sp"
                        android:layout_marginBottom="2sp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/album_lbl_desCoverImg"
                        android:gravity="start"
                        android:scaleType="fitXY" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvReleaseDateLbl"
                                android:layout_width="fill_parent"
                                android:layout_height="40sp"
                                android:layout_marginTop="30sp"
                                android:layout_weight="1"
                                android:text="@string/album_lbl_releaseDate"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvReleaseDateText"
                                android:layout_width="fill_parent"
                                android:layout_height="40sp"
                                android:layout_marginTop="30sp"
                                android:layout_weight="1"
                                android:textColor="@android:color/black"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvGenreLbl"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:layout_marginTop="30sp"
                                android:layout_weight="1"
                                android:text="@string/album_lbl_genre"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvGenreText"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="30sp"
                                android:layout_weight="1"
                                android:textColor="@android:color/black"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvRecordLabelLbl"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:layout_marginTop="30sp"
                                android:layout_weight="1"
                                android:text="@string/album_lbl_recordLabel"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvRecordLabelText"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="30sp"
                                android:layout_weight="1"
                                android:textColor="@android:color/black"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvDescriptionText"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="30sp"
                            android:layout_weight="1"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <Button
                            android:id="@+id/new_track_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Agregar nuevo track" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>